--- a/Terms.html
+++ b/Terms.html
@@ -50,8 +50,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Consulting.html" style="padding: 10px 20px;">Consulting</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Training.html" style="padding: 10px 20px;">Training</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Services.html" style="padding: 10px 20px;">Services</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
 </li></ul>
@@ -60,9 +59,8 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Consulting.html">Consulting</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Training.html">Training</a>
+                <ul class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html">Services</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
 </li></ul>
@@ -95,8 +93,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h4 class="u-text u-text-1"> 1. General Terms</h4>
         <ul class="u-text u-text-2">
-          <li>
-            <span style="font-weight: 700;"></span>These Terms and Conditions govern your use of our training programs and consulting services.
+          <li><span style="font-weight: 700;"></span>These Terms and Conditions govern your use of our training programs and consulting services.
           </li>
           <li>By enrolling in a course or engaging in a consulting project, you acknowledge and agree to these terms.</li>
           <li>Payment for all services is agreed upon on a case-by-case basis.</li>
@@ -107,8 +104,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h4 class="u-text u-text-1"> 2. Course Enrollment &amp; Payment Policy</h4>
         <ul class="u-text u-text-2">
-          <li>
-            <span style="font-weight: 700;"></span>A 25% deposit is required to secure your seat in any course.
+          <li><span style="font-weight: 700;"></span>A 25% deposit is required to secure your seat in any course.
           </li>
           <li>The deposit is non-refundable after two (2) weeks from the course start date.</li>
           <li>Full payment must be completed by the agreed deadline.</li>
@@ -160,8 +156,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <h4 class="u-text u-text-1"> 7. Contact Information</h4>
         <p class="u-text u-text-2"> If you have any questions or need clarification on these terms, please contact us at:</p>
         <ul class="u-text u-text-3">
-          <li>
-            <span style="font-weight: 700;"></span>Email: richard@rkkoranteng.com
+          <li><span style="font-weight: 700;"></span>Email: richard@rkkoranteng.com
           </li>
           <li> Website: https://rkkoranteng.com</li>
         </ul>
@@ -172,11 +167,10 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
     
     <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="footer"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-1">
-          <a href="Consulting.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Consulting </a>| <a href="Training.html" data-page-id="949314753" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">Training</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
+          <a href="Services.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Services</a>| <a href="About.html" data-page-id="668010430" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">About</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
         </p>
         <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
-      </div></footer>
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
   
 </body></html>
