--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
             </div>
           </div>
         </div>
-        <a href="" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">See Services </a>
+        <a href="Services.html" data-page-id="440806750" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" title="Services">See Services </a>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-grey-5 u-hidden u-section-3" id="sec-3754">
@@ -142,7 +142,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
                   <h4 class="u-text u-text-1"> Hi, I'm Richard Koranteng,</h4>
                   <h2 class="u-text u-text-default u-text-2">Your Modern DBA</h2>
                   <p class="u-text u-text-3">I help businesses modernize their database workflows, improve operational efficiency, and drive innovation.&nbsp;</p>
-                  <a href="About.html" data-page-id="668010430" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" target="_blank" title="Contact">About Me </a>
+                  <a href="About.html" data-page-id="668010430" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" target="_blank" title="About">About Me </a>
                 </div>
               </div>
               <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="960" data-image-height="878">
