--- a/Services.html
+++ b/Services.html
@@ -80,25 +80,25 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-1"><img src="images/12333514-e92e2a1e.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-1"><img src="images/157919-32c7d73a.png" alt=""></span>
                 <h4 class="u-text u-text-2">Database Pipelines</h4>
                 <p class="u-text u-text-default u-text-3"> Streamline your database deployments so you can deliver updates faster, with fewer errors, and greater confidence.</p>
               </div>
             </div>
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-2">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-icon u-icon-rounded u-palette-1-base u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 128 128" style=""><use xlink:href="#svg-f6e7"></use></svg><svg class="u-svg-content" viewBox="0 0 128 128" id="svg-f6e7"><path d="m102.7 39.2c0.8 0 1.5 0.3 2.1 0.9l7.8 7.8c4.8 4.8 7.7 11.5 7.4 18.3-0.6 12.6-11 22.6-23.7 22.6h-29c-0.1 0-0.1-0.1-0.1-0.2 1.1-3 4.1-5.2 7.5-5.2h10.5c0.9 0 1.8-0.4 2.3-1.1 0.8-1.1 0.7-2.6-0.3-3.5l-24.9-24.8c-0.6-0.6-0.9-1.3-0.9-2.1s0.3-1.5 0.9-2.1 1.3-0.8 2.1-0.8 1.5 0.3 2.1 0.8l16.9 16.9c0.5 0.5 1.2 0.8 1.9 0.8s1.4-0.3 1.9-0.8 0.8-1.2 0.8-1.9-0.3-1.4-0.8-1.9l-6.7-6.7c-0.6-0.6-0.9-1.3-0.9-2.1s0.3-1.5 0.9-2.1 1.3-0.8 2.1-0.8 1.5 0.3 2.1 0.8l4 4c0.5 0.5 1.2 0.8 1.9 0.8s1.4-0.3 1.9-0.8 0.8-1.2 0.8-1.9-0.3-1.4-0.8-1.9l-2.7-2.7c-0.5-0.5-0.8-1.2-0.8-2s0.3-1.5 0.9-2.1 1.3-0.9 2.1-0.9 1.5 0.3 2.1 0.9l2.7 2.7c0.5 0.5 1.2 0.8 1.9 0.8s1.4-0.3 1.9-0.8 0.8-1.2 0.8-1.9-0.2-1.3-0.7-1.8c-0.8-0.9-1.2-2.1-0.8-3.3 0.5-1.3 1.6-1.9 2.8-1.9m0-8c-2.9 0-5.7 1.1-7.8 3.2-0.7 0.7-1.2 1.4-1.7 2.1 0 0-0.1 0.1-0.1 0-0.4 0-0.8-0.1-1.1-0.1-2.9 0-5.7 1.1-7.8 3.2-1 1-1.8 2.2-2.3 3.4 0 0 0 0.1-0.1 0.1-2.6 0.2-5.1 1.3-6.9 3.2l-0.2 0.2-2.5-2.5c-2-2-4.9-3.2-7.8-3.2s-5.7 1.1-7.8 3.2-3.2 4.9-3.2 7.8c0 3 1.2 5.7 3.2 7.8l15.8 15.8c0.1 0.1 0 0.2-0.1 0.2-5.8 0.8-10.8 4.8-12.8 10.5-1.9 5.2 2 10.7 7.5 10.7h29.1c8.5 0 16.4-3.3 22.4-9.3 6.1-6.1 9.4-14.3 9.3-23-0.1-8.4-3.8-16.4-9.8-22.4l-7.8-7.8c-1.8-2-4.6-3.1-7.5-3.1z"></path><path d="m82.1 118c0 1.1-0.9 2-2 2h-70.2c-1.1 0-2-0.9-2-2v-108c0-1.1 0.9-2 2-2h70.1c1.1 0 2 0.9 2 2v16.9c0 2.2 1.8 4 4 4s4-1.8 4-4v-16.9c0-5.5-4.5-10-9.9-10h-70.2c-5.4 0-9.9 4.5-9.9 10v108c0 5.5 4.5 10 9.9 10h70.1c5.5 0 9.9-4.5 9.9-10v-10.6c0-2.2-1.8-4-4-4s-4 1.8-4 4v10.6z"></path></svg></span>
+              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-2"><img src="images/7532224-5bbf1a37.png" alt=""></span>
                 <h4 class="u-text u-text-4">Cloud Migration&nbsp;</h4>
                 <p class="u-text u-text-default u-text-5"> Move your databases to the cloud seamlessly - reducing overhead, boosting performance, and unlocking scalability.</p>
               </div>
             </div>
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-3">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-3"><img src="images/5332839-ed632c3e.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-3"><img src="images/2438078-ce1f171c.png" alt=""></span>
                 <h4 class="u-text u-text-6">Security</h4>
                 <p class="u-text u-text-default u-text-7"> Protect your data and meet compliance standards so you can sleep better at night knowing your systems are secure.</p>
               </div>
             </div>
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-4">
-              <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-4"><img src="images/5332839-ed632c3e.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-4"><img src="images/157919-32c7d73a.png" alt=""></span>
                 <h4 class="u-text u-text-8">Infrastructure Automation</h4>
                 <p class="u-text u-text-default u-text-9"> Automate your database infrastructure to save time, reduce manual errors, and free your team to focus on innovation.</p>
               </div>
@@ -110,7 +110,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
               </div>
             </div>
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-6">
-              <div class="u-container-layout u-similar-container u-container-layout-6"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-6"><img src="images/5332839-ed632c3e.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-6"><span class="u-file-icon u-icon u-icon-rounded u-palette-1-base u-icon-6"><img src="images/8111762-8371d226.png" alt=""></span>
                 <h4 class="u-text u-text-12">Agile Coaching</h4>
                 <p class="u-text u-text-default u-text-13"> Transform your DBA team into a high-performing Agile powerhouse ready to support fast-paced development.</p>
               </div>
