--- a/About.html
+++ b/About.html
@@ -103,7 +103,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
                   <p class="u-text u-text-2">Hi, I’m Richard Koranteng, a seasoned database professional with over a decade of experience helping individuals transform their careers and companies modernize their database systems. I’ve consulted for top-tier organizations and trained hundreds of DBAs to stay competitive in a fast-changing tech landscape. My passion is helping businesses modernize their database systems.</p>
                   <p class="u-text u-text-3">talks about #devops #cloud #database<span style="font-style: italic;"><span style="font-style: normal;"></span></span>
                   </p>
-                  <a href="https://www.linkedin.com/in/richard-koranteng" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" target="_blank">Stay​ Connect</a>
+                  <a href="https://www.linkedin.com/in/richard-koranteng" class="u-align-center u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" target="_blank">Stay​ Connected</a>
                 </div>
               </div>
               <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="200" data-image-height="200">
